fixing right aligned style

--- a/src/web-app/styles/pages/info-page.scss
+++ b/src/web-app/styles/pages/info-page.scss
@@ -100,6 +100,10 @@
             h1{
                 right: 0;
             }
+
+            .img-wrapper::before{
+                background: linear-gradient(207deg, rgba(0,0,0,0.9317927854735644) 0%, rgba(0,0,0,0.8477591720281863) 9%, rgba(0,0,0,0) 100%);
+            }
         }
         // Mobile style
         @include respond-to('0-to-medium') {
